setup-scripts/70-spark/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: spark
spec:
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
  hostname: busybox
  #hostNetwork: true
  #dnsPolicy: ClusterFirstWithHostNet
