setup-scripts/70-spark/busybox2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox2
  namespace: spark
spec:
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox2
  restartPolicy: Always
  hostname: busybox2
  dnsPolicy: ClusterFirstWithHostNet
  hostNetwork: false
  #dnsPolicy: ClusterFirstWithHostNet
