setup-scripts/70-spark/busybox-example-nosubdomain.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox-service
spec:
  selector:
    name: busybox
  clusterIP: None
  ports:
  - name: foo # name is not required for single-port Services
    port: 1234
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
  labels:
    name: busybox
spec:
  hostname: busybox-1
  dnsPolicy: ClusterFirstWithHostNet
  hostNetwork: true
  #subdomain: busybox-subdomain
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox2
  labels:
    name: busybox
spec:
  hostname: busybox-2
  dnsPolicy: ClusterFirstWithHostNet
  hostNetwork: true
  #subdomain: busybox-subdomain
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    name: busybox
