setup-scripts/70-spark/spark-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  namespace: spark
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: spark
spec:
  ingressClassName: nginx
  tls:
    - secretName: spark-ssl
      hosts:
      - spark.vps4.cluster-1.de
  rules:
  - host: "spark.vps4.cluster-1.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: bit-spark-master-svc
              port:
                number: 80
