setup-scripts/70-spark/spark-webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-webui-ingress
  namespace: spark
  #annotations:
  #  cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: canvas-keycloak
spec:
  ingressClassName: nginx
  #tls:
  #  - secretName: canvas-keycloak-ssl
  #    hosts:
  #    - keycloak.vps-2.cluster-4.de              
  rules:
  - host: "keycloak.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: canvas-keycloak
              port:
                number: 8088



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-webui-ingress
  namespace: spark
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: etherpad
spec:
  ingressClassName: nginx
  tls:
    - secretName: etherpad-ssl
      hosts:
      - etherpad.vps-2.cluster-4.de          
  rules:
  - host: "etherpad.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: bit-spark-master-svc
              port:
                number: 80
